Fixed z-index issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -83,6 +83,7 @@ main {
       margin-top: 7.5rem;
       a {
         position: relative;
+        z-index: -1;
         &::after {
           content: '';
           position: absolute;
